--- a/MVCLibrary/appsettings.json
+++ b/MVCLibrary/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MVCLibraryContext": "Server=(localdb)\\mssqllocaldb;Database=MVCLibraryContext-c29f8ac6-7ca9-4a70-84aa-412126a3ec02;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
